# Network-Traffic-Shaping-and-QoS-Simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
include/: Flow.h  Packet.h  PacketQueue.h  StatisticsCollector.h  TokenBucket.h  TrafficGenerator.h  TrafficShaper.h
results/: scenario1_stats.csv  scenario2_stats.csv  scenario3_stats.csv  summary.txt
scripts/: __init__.py  visualize_results.py
src/: main.cpp
